<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/colorLight">
	
	<android.support.v7.widget.Toolbar
			android:id="@+id/new_post_toolbar"
			android:layout_width="0dp"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			android:elevation="6dp"
			app:popupTheme="@style/AppTheme.PopupOverlay"
			app:theme="@style/AppTheme.AppBarOverlay" app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
	
	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="?attr/actionBarSize"
			android:background="@color/colorLight" android:id="@+id/new_note_scroll_view"
			app:layout_constraintTop_toBottomOf="@+id/new_post_toolbar" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/new_note_post_button">
		<android.support.constraint.ConstraintLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent">
			<android.support.v7.widget.CardView
					android:id="@+id/new_note_upload_image_box"
					android:orientation="horizontal"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:cardBackgroundColor="@color/cardview_light_background"
					app:cardElevation="8dp" android:clickable="true" android:focusable="true">
				<TextView
						android:id="@+id/new_note_image_path"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:textSize="16sp"
						android:gravity="fill_vertical"
						android:textColor="@color/colorTextSecondary"
						android:text="@string/select_image"
						android:textStyle="italic"
						android:ellipsize="end"
						android:singleLine="true"
						android:drawableEnd="@drawable/ic_gallery_gray_24dp" android:padding="12dp" />
			</android.support.v7.widget.CardView>
			<TextView
					android:id="@+id/new_note_brand_selector"
					android:text="@string/select_brand"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="4"
					android:layout_marginEnd="8dp"
					android:layout_marginStart="8dp"
					android:textSize="18sp"
					android:paddingBottom="8dp"
					android:paddingTop="8dp"
					android:textColor="@color/colorTextPrimary"
					android:background="@drawable/bg_send_message"
					android:layout_marginTop="16dp"
					android:drawableEnd="@drawable/ic_expand_more_black_24dp"
					app:layout_constraintTop_toBottomOf="@+id/new_note_upload_image_box"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent" android:elevation="8dp" />
			<TextView
					android:id="@+id/new_note_model_selector"
					android:text="@string/select_model"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginEnd="8dp"
					android:layout_marginStart="8dp"
					android:textSize="18sp"
					android:paddingBottom="8dp"
					android:paddingTop="8dp"
					android:textColor="@color/colorTextPrimary"
					android:background="@drawable/bg_send_message"
					android:layout_marginTop="16dp"
					android:drawableEnd="@drawable/ic_expand_more_black_24dp"
					app:layout_constraintTop_toBottomOf="@+id/new_note_brand_selector"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent" android:enabled="true" android:visibility="gone"
					android:elevation="8dp" />
			<EditText
					android:id="@+id/new_note_title"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:inputType="textAutoCorrect|textMultiLine"
					android:ems="10"
					android:layout_marginEnd="8dp"
					android:layout_marginStart="8dp"
					android:hint="@string/title"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/new_note_model_selector"
					android:textColor="@color/colorTextPrimary"
					android:textColorHint="@color/colorTextSecondary"
					android:layout_marginTop="16dp"
					android:maxLength="100"
					android:maxLines="2"
					android:singleLine="false" />
			<EditText
					android:id="@+id/new_note_content"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:ems="10"
					android:layout_marginTop="8dp"
					android:layout_marginEnd="8dp"
					android:layout_marginStart="8dp"
					app:layout_constraintTop_toBottomOf="@+id/new_note_title"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					android:hint="@string/content_markdown_support"
					android:textColor="@color/colorTextPrimary"
					android:textColorHint="@color/colorTextSecondary"
					android:inputType="textCapSentences|textMultiLine"
					android:maxLength="10000"
					android:maxLines="5"
					android:singleLine="false" />
		</android.support.constraint.ConstraintLayout>
	</ScrollView>
	
	<Button
			android:id="@+id/new_note_post_button"
			android:text="@string/post"
			android:layout_width="0dp"
			android:layout_height="52dp"
			android:gravity="center_vertical|center_horizontal"
			android:theme="@style/CustomButtonColor"
			app:layout_anchorGravity="bottom|center"
			app:layout_anchor="@+id/new_note_scroll_view"
			android:textColor="@color/colorText"
			android:elevation="0dp"
			android:fadeScrollbars="false"
			android:fitsSystemWindows="false"
			android:filterTouchesWhenObscured="false"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>
